# controle-financeiro

./: .env.example  .gitignore  DEPLOY.md  README.md  VERCEL.md  pyproject.toml  requirements-deploy.txt  requirements.txt  vercel.json
api/: cron_diario.py  fechamento.py
controle_financeiro/: alertas.py  aprendizado.py  avaliacao.py  bootstrap.py  classificador.py  comparador.py  competencia.py  config.py  consultas.py  db.py  dre_fatura.py  fechamento.py  importador.py  ingestao.py  mapeador.py  models.py  normalizacao.py  orquestrador.py  parcelas.py  reconciliacao.py  regras_negocio.py  revisao.py  upsert.py
deploy/: cliente_ia.py  fechar_mes_main.py  main.py  probe_fatura.py  runner.py  sheets_adapter.py  telegram_callback.py  telegram_envio.py  transporte_banco_mcp.py
scripts/: avaliar_real.py  converter_custo_mes.py  diagnostico_fatura.py  fechamento_demo.py  ingerir_demo.py  limpar_fatura.py  migrar_custo_mes.py  montar_orcamento.py  resumo_demo.py  seed_producao.py
tests/: conftest.py  test_alertas.py  test_aprendizado.py  test_aprendizado_botao.py  test_avaliacao.py  test_bootstrap.py  test_bot.py  test_botoes.py  test_botoes_paginado.py  test_classificador.py  test_comparador.py  test_competencia.py  test_competencia_ciclo.py  test_config.py  test_consultas.py  test_conta_corrente.py  test_corrigir.py  test_deploy_cliente_ia.py  test_deploy_main_importa.py  test_deploy_runner.py  test_deploy_sheets.py  test_deploy_telegram.py  test_deploy_transporte.py  test_dre_fatura.py  test_escritor_fatura.py  test_fallback_ia.py  test_fechamento_model.py  (+32 more)
(+9 files in other folders)
